changing navigation approach for the administration component is needed, use angular router instead

--- a/src/app/pages/administration/administration.component.html
+++ b/src/app/pages/administration/administration.component.html
@@ -1,5 +1,7 @@
 <section class="flex flex-grow">
-  <aside class="flex flex-col w-full max-w-52 border-r border-lavender-gray">
+  <aside
+    class="hidden | lg:flex flex-col w-full max-w-52 border-r border-lavender-gray"
+  >
     <ul class="w-full h-[80dvh]">
       <li class="w-full">
         <button
