--- a/src/app/pages/schedule/schedule.component.html
+++ b/src/app/pages/schedule/schedule.component.html
@@ -1,4 +1,4 @@
-<section class="lg:flex lg:justify-center lg:h-full">
+<section class="lg:flex lg:justify-center lg:h-full lg:min-h-[80dvh]">
   <div
     class="flex flex-col items-center mt-10 | lg:space-y-6 lg:w-big-container lg:px-8 lg:mt-10 lg:mb-20"
   >
