handling administration component with nested routes using Angular Router

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -67,7 +67,7 @@
               <nt-button
                 [isPrimary]="true"
                 label="Administrar"
-                href="/administracion"
+                href="/administracion/clientes"
               />
             </li>
           }
@@ -84,7 +84,7 @@
               <nt-button
                 [isPrimary]="true"
                 label="Agendar"
-                href="/agenda"
+                href="/administracion/agenda"
                 (click)="toggleMenu()"
               />
             </li>
