--- a/src/app/pages/administration/components/user-administration/user-box/user-box.component.html
+++ b/src/app/pages/administration/components/user-administration/user-box/user-box.component.html
@@ -13,13 +13,13 @@
       </div>
       <button
         [ngClass]="user()!.hasPaid ? 'bg-[#A499BA]' : 'bg-[#CE8B95]'"
-        class="p-4 rounded-full lg:hover:outline outline-1 outline-white"
+        class="hidden p-4 rounded-full outline-1 outline-white | lg:block lg:hover:outline"
         (click)="startEditing(user()!.id)"
       >
         <img src="assets/icons/edit-icon.svg" />
       </button>
     </div>
-    <div class="flex space-x-6">
+    <div class="flex flex-col space-y-2 | lg:flex-row lg:space-x-6">
       <ul class="flex flex-col justify-center items-start ml-4 space-y-2">
         <li class="flex flex-row space-x-4 items-center">
           <img src="assets/icons/phone-icon-fill.svg" width="20" height="20" />
@@ -43,12 +43,19 @@
           <img src="assets/icons/dollar-icon.svg" width="20" height="20" />
           <span>{{ user()!.hasPaid ? "Pago al dia" : "Pago con demora" }}</span>
         </li>
-        <li class="flex flex-row space-x-4 items-end">
+        <li class="flex flex-row space-x-4 items-center | lg:items-end">
           <img src="assets/icons/award-icon.svg" width="20" height="20" />
           <span>{{ user()!.goals }}</span>
         </li>
       </ul>
     </div>
+    <nt-button
+      label="Modificar"
+      [isPrimary]="false"
+      [rounded]="false"
+      class="w-full mt-2 | lg:hidden"
+      (click)="startEditing(user()!.id)"
+    />
   } @else {
     <ul class="flex w-full items-center justify-between">
       <li class="flex flex-col justify-center">
