--- a/src/app/pages/administration/components/user-administration/user-editing-form/user-editing-form.component.html
+++ b/src/app/pages/administration/components/user-administration/user-editing-form/user-editing-form.component.html
@@ -1,5 +1,5 @@
 <form
-  class="flex text-primary-purple flex-col w-full max-w-80 | lg:max-w-none lg:p-8 lg:items-center"
+  class="flex text-primary-purple mx-auto flex-col w-full max-w-80 | lg:max-w-none lg:p-8 lg:items-center"
   [formGroup]="form"
   (ngSubmit)="onSubmit()"
 >
