--- a/src/app/pages/schedule/schedule.component.html
+++ b/src/app/pages/schedule/schedule.component.html
@@ -1,11 +1,11 @@
 <section class="lg:flex lg:justify-center lg:h-full lg:min-h-[80dvh]">
   <div
-    class="flex flex-col items-center mt-10 | lg:space-y-6 lg:w-full lg:px-8 lg:mt-10 lg:mb-20"
+    class="flex flex-col items-center mt-10 | lg:space-y-6 lg:px-8 lg:mt-10 lg:mb-20 lg:w-big-container | xl:px-8"
   >
     <h2 class="hidden | lg:block lg:text-2xl lg:text-primary-purple">
       Seleccione una fecha
     </h2>
-    <nt-calendar class="w-full max-w-[90%]" />
+    <nt-calendar class="w-full | sm:w-4/5 | lg:w-full" />
   </div>
   <div
     class="border-l border-lavender-gray | lg:h- lg:px-4 lg:w-small-container"
