--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -1,5 +1,5 @@
 <section
-  class="flex flex-col text-primary-purple px-mobile-padding items-center h-dvh py-8 | lg:px-0 lg:h-auto lg:items-start lg:flex-row lg:py-0"
+  class="flex flex-col text-primary-purple px-mobile-padding items-center pt-8 pb-14 | lg:px-0 lg:h-auto lg:items-start lg:flex-row lg:py-0"
 >
   <div
     class="hidden | lg:flex flex-col space-y-6 items-center w-big-container mt-52"
@@ -16,7 +16,7 @@
     </div>
   </div>
   <form
-    class="flex flex-col w-full max-w-80 | lg:w-small-container lg:max-w-none lg:px-4 lg:items-center lg:py-10 lg:h-full lg:border-l lg:border-l-lavender-gray"
+    class="flex flex-col w-full max-w-[500px] items-center justify-center | lg:px-8 lg:justify-start lg:w-small-container lg:max-w-none lg:items-center lg:py-10 lg:h-full lg:border-l lg:border-l-lavender-gray"
     [formGroup]="form"
     (ngSubmit)="onSubmit()"
   >
@@ -25,7 +25,7 @@
       type="text"
       [control]="getFormControl('fullName')"
       id="fullName"
-      class="w-full max-w-72 mt-3"
+      class="w-full mt-3"
       [validationErrorObject]="validationErrorObject.fullName"
       placeholder="Ejem: Pia Ulloa"
     />
@@ -34,7 +34,7 @@
       type="text"
       [control]="getFormControl('email')"
       id="email"
-      class="w-full max-w-72 mt-3"
+      class="w-full mt-3"
       [validationErrorObject]="validationErrorObject.email"
       placeholder="Ejem: pia@Ulloa.com"
     />
@@ -43,7 +43,7 @@
       type="text"
       [control]="getFormControl('rut')"
       id="rut"
-      class="w-full max-w-72 mt-3"
+      class="w-full mt-3"
       [validationErrorObject]="validationErrorObject.rut"
       placeholder="Ejem: 26.245.083-k"
     />
@@ -53,7 +53,7 @@
       [control]="getPasswordNestedControl('password')"
       id="password"
       validationErrorOutput="Nueva contraseña invalida debe contener: "
-      class="w-full max-w-72 mt-3"
+      class="w-full mt-3"
       [validationErrorObject]="validationErrorObject.password"
       placeholder="La contraseña debe contener mas de 6 caracteres"
     />
@@ -62,7 +62,7 @@
       type="password"
       [control]="getPasswordNestedControl('passwordConfirm')"
       id="confirmedPassword"
-      class="w-full max-w-72 mt-3"
+      class="w-full mt-3"
       [validationErrorObject]="validationErrorObject.passwordConfirm"
       placeholder="Asegurate de escribir la misma contraseña"
     />
@@ -71,7 +71,7 @@
       type="number"
       [control]="getFormControl('yearOfBirth')"
       id="yearOfBirth"
-      class="w-full max-w-72 mt-3"
+      class="w-full mt-3"
       [validationErrorObject]="validationErrorObject.yearOfBirth"
       placeholder="Ejem: 1995"
     />
@@ -80,7 +80,7 @@
       type="text"
       [control]="getFormControl('phoneNumber')!"
       id="phoneNumber"
-      class="w-full max-w-72 mt-3"
+      class="w-full mt-3"
       [validationErrorObject]="validationErrorObject.phoneNumber"
       placeholder="Ejem: +56 9 3245 3254"
     />
@@ -89,7 +89,7 @@
       type="text"
       [control]="getFormControl('previousDiagnostics')"
       id="previousDiagnostics"
-      class="w-full max-w-72 mt-3"
+      class="w-full mt-3"
       [validationErrorObject]="validationErrorObject.previousDiagnostics"
       placeholder="Ejem: Diabetes, Hipertension"
     />
@@ -98,7 +98,7 @@
       type="text"
       [control]="getFormControl('goals')"
       id="goals"
-      class="w-full max-w-72 mt-3"
+      class="w-full mt-3"
       [validationErrorObject]="validationErrorObject.goals"
       placeholder="Ejem: Perder 6kg de manera controlada"
     />
@@ -106,11 +106,10 @@
     <nt-button
       [isPrimary]="true"
       label="Registrarse"
-      class="w-[193px] h-[55px] mx-auto mt-3 lg:m-0"
+      class="w-[193px] h-[55px] mx-auto mt-3"
       type="submit"
       [isLoading]="httpResponseIsLoading()"
       [isDisabled]="form.invalid || !form.dirty"
-      class="mt-3"
     />
   </form>
 </section>
