--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -2,21 +2,10 @@
   class="flex flex-col text-primary-purple px-mobile-padding items-center pt-8 pb-14 | lg:px-0 lg:h-auto lg:items-start lg:flex-row lg:py-0"
 >
   <div
-    class="hidden | lg:flex flex-col space-y-6 items-center w-big-container mt-52"
-  >
-    <nt-logo class="lg:text-6xl" />
-    <div class="flex space-x-8">
-      <nt-decorative-icon type="fish" color="#D6D6D6" />
-      <nt-decorative-icon type="chicken" color="#D6D6D6" />
-      <nt-decorative-icon type="banana" color="#D6D6D6" />
-      <nt-decorative-icon type="apple" color="#D6D6D6" />
-      <nt-decorative-icon type="brocoli" color="#D6D6D6" />
-      <nt-decorative-icon type="banana" color="#D6D6D6" />
-      <nt-decorative-icon type="fish" color="#D6D6D6" />
-    </div>
-  </div>
+    class="hidden | lg:flex flex-col h-[90dvh] rounded-2xl m-10 bg-register-image bg-cover bg-no-repeat bg-center items-center justify-center overflow-hidden p-8 w-big-container"
+  ></div>
   <form
-    class="flex flex-col w-full max-w-[500px] items-center justify-center | lg:px-8 lg:justify-start lg:w-small-container lg:max-w-none lg:items-center lg:py-10 lg:h-full lg:border-l lg:border-l-lavender-gray"
+    class="flex flex-col w-full max-w-[500px] items-center justify-center | lg:px-8 lg:justify-start lg:w-small-container lg:max-w-none lg:items-center lg:pt-4 lg:pb-16 lg:h-full lg:border-l lg:border-l-lavender-gray"
     [formGroup]="form"
     (ngSubmit)="onSubmit()"
   >
@@ -106,7 +95,7 @@
     <nt-button
       [isPrimary]="true"
       label="Registrarse"
-      class="w-[193px] h-[55px] mx-auto mt-3"
+      class="w-[193px] mx-auto mt-3 lg:mt-5"
       type="submit"
       [isLoading]="httpResponseIsLoading()"
       [isDisabled]="form.invalid || !form.dirty"
