changing confirmation email method from user administration service to authentication service, finish implementing the confirmation email logic

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -78,7 +78,7 @@
             <li>
               <nt-button
                 [isPrimary]="true"
-                label="Agenda"
+                label="Administracion"
                 href="/administracion/agenda"
               />
             </li>
