show appointment type when admin or client owner is authenticated

--- a/src/app/pages/schedule/components/details-sidepanel/components/appointment-info-box/appointment-info-box.component.html
+++ b/src/app/pages/schedule/components/details-sidepanel/components/appointment-info-box/appointment-info-box.component.html
@@ -41,7 +41,7 @@
         <img src="assets/icons/skinny-arrow-left-icon.svg" class="mx-4" />
         <span>{{ time() }}</span>
       } @else {
-        @if (isAppointmentOwner()) {
+        @if (isAppointmentOwnerOrAdmin()) {
           <svg
             width="20"
             height="20"
